@@ -76,6 +76,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Random
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -1774,11 +1784,15 @@ parameter_list|)
 throws|throws
 name|Exception
 block|{
-annotation|@
-name|SuppressWarnings
+name|Random
+name|random
+init|=
+operator|new
+name|Random
 argument_list|(
-literal|"unchecked"
+literal|123L
 argument_list|)
+decl_stmt|;
 specifier|final
 name|AvailableSpaceVolumeChoosingPolicy
 argument_list|<
@@ -1786,15 +1800,13 @@ name|FsVolumeSpi
 argument_list|>
 name|policy
 init|=
-name|ReflectionUtils
-operator|.
-name|newInstance
-argument_list|(
+operator|new
 name|AvailableSpaceVolumeChoosingPolicy
-operator|.
-name|class
-argument_list|,
-literal|null
+argument_list|<
+name|FsVolumeSpi
+argument_list|>
+argument_list|(
+name|random
 argument_list|)
 decl_stmt|;
 name|List
